force-app/main/default/objects/Address/fields/GLBP1_Calle_N__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Calle_N__c</fullName>
    <label>Calle N°</label>
    <length>100</length>
    <type>Text</type>
</CustomField>