force-app/main/default/objects/Address/fields/GLBP1_Comuna__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Comuna__c</fullName>
    <inlineHelpText>Seleccione primero la Región para que se desplieguen las Comunas de la Región</inlineHelpText>
    <label>Comuna</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GLBP1_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>GLBP1_Comuna</valueSetName>
    </valueSet>
</CustomField>