force-app/main/default/objects/Address/fields/GLBP1_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Direcciones</relationshipLabel>
    <relationshipName>Direcciones</relationshipName>
    <type>Lookup</type>
</CustomField>