force-app/main/default/objects/Address/fields/GLBP1_DepartamentoOficina__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_DepartamentoOficina__c</fullName>
    <label>Departamento/Oficina</label>
    <length>50</length>
    <type>Text</type>
</CustomField>