force-app/main/default/objects/Address/fields/GLBP1_Nombre_direccion__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Nombre_direccion__c</fullName>
    <inlineHelpText>Nombre de la Cuenta + Calle N°</inlineHelpText>
    <label>Nombre de dirección</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>