force-app/main/default/objects/Address/fields/GLBP1_Pais__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Pais__c</fullName>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Brasil</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>Paraguay</fullName>
            </value>
            <value>
                <fullName>Perú</fullName>
            </value>
            <value>
                <fullName>Uruguay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>