force-app/main/default/objects/Address/fields/GLBP1_Region__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Region__c</fullName>
    <inlineHelpText>Seleccione una Región y luego la Comuna</inlineHelpText>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>GLBP1_Pais__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>GLBP1_Region</valueSetName>
    </valueSet>
</CustomField>