force-app/main/default/objects/Address/fields/GLBP1_VillaPoblacionSector__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_VillaPoblacionSector__c</fullName>
    <label>Villa/Población/Sector</label>
    <length>100</length>
    <type>Text</type>
</CustomField>