force-app/main/default/objects/Address/fields/Nombre_de_direcci_n__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_direcci_n__c</fullName>
    <inlineHelpText>Nombre de la Cuenta + Calle N°</inlineHelpText>
    <label>Nombre de dirección</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>